<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

<group android:checkableBehavior="single">

    <item
        android:id="@+id/nav_legaladvices"
        android:title="@string/menu_drawable_legal_advice"
        android:icon="@drawable/ic_menu_copy_holo_light"
    />

    <item
        android:id="@+id/nav_contact"
        android:title="@string/menu_drawable_suggestions"
        android:icon="@drawable/ic_menu_help"
    />

    <item
        android:id="@+id/nav_telegram"
        android:title="@string/menu_drawable_telegram"
        android:icon="@drawable/ic_menu_allfriends"
    />

    <item
        android:id="@+id/nav_othersapps"
        android:title="@string/menu_drawable_others_apps"
        android:icon="@drawable/ic_menu_find"
    />

</group>

</menu>