<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/layoutMain"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:background="#FFFFFF"
        app:itemTextColor="#757171"
        android:fontFamily="@font/open_sans_light"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"
        android:textSize="25sp"
        android:maxWidth="0dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/img_background_white"

            />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#3D0555"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewWave"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:scaleY="-1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/ic_wave"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="69dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/img_logo_dashboard" />

        <!-- BODY -->
        <ScrollView
            android:id="@+id/scrollBody"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintBottom_toTopOf="@+id/containerFooter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.297"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/linearBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <!-- Linha 1 -->
                <TableLayout
                    android:id="@+id/containerLine0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    >

                    <TableRow>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/imageViewChild"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/img_main_child_care"
                                android:onClick="GoToPediatricCalculationActivity"
                                />

                            <TextView
                                android:id="@+id/textViewChild"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageViewChild"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="14dp"
                                android:fontFamily="@font/open_sans_light"
                                android:text="@string/main_label_children"
                                android:textColor="#5C5B5B"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                android:onClick="GoToPediatricCalculationActivity"
                                android:textAlignment="center"
                                />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/imageViewAdult"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/img_main_child_adult"
                                android:onClick="GoToCalculationActivity"
                                />

                            <TextView
                                android:id="@+id/textViewAdult"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageViewAdult"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="14dp"
                                android:fontFamily="@font/open_sans_light"
                                android:text="@string/main_label_adults"
                                android:textColor="#5C5B5B"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                android:onClick="GoToCalculationActivity"
                                android:textAlignment="center"
                                />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/imageViewUrine24"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/img_main_urine24"
                                android:onClick="GoToUrineCalculateActivity"
                                />

                            <TextView
                                android:id="@+id/textViewUrine24"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageViewUrine24"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="14dp"
                                android:fontFamily="@font/open_sans_light"
                                android:text="@string/main_label_urine24h"
                                android:textColor="#5C5B5B"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                android:onClick="GoToUrineCalculateActivity"
                                android:textAlignment="center"
                                />

                        </RelativeLayout>

                    </TableRow>

                </TableLayout>

                <!-- Linha 1 -->
                <TableLayout
                    android:id="@+id/containerLine1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    >

                    <TableRow>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/imageViewConversion"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/img_main_convertion"
                                android:onClick="GoToConvertionsActivity"
                                />

                            <TextView
                                android:id="@+id/textViewConversion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageViewConversion"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="14dp"
                                android:fontFamily="@font/open_sans_light"
                                android:text="@string/main_label_convertion"
                                android:textColor="#5C5B5B"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                android:onClick="GoToConvertionsActivity"
                                android:textAlignment="center"
                                />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/imageViewProportion"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/img_main_proportion"
                                android:onClick="GoToProportionsActivity"
                                />

                            <TextView
                                android:id="@+id/textViewProportion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageViewProportion"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="14dp"
                                android:fontFamily="@font/open_sans_light"
                                android:text="@string/main_label_proportion"
                                android:textColor="#5C5B5B"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                android:onClick="GoToProportionsActivity"
                                android:textAlignment="center"
                                />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/imageViewLegalAdvice"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/img_main_legal_advice"
                                android:onClick="GoToLegalAdviceActivity"
                                />

                            <TextView
                                android:id="@+id/textViewLegalAdvice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageViewLegalAdvice"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="14dp"
                                android:fontFamily="@font/open_sans_light"
                                android:onClick="GoToLegalAdviceActivity"
                                android:text="@string/main_label_legal_advice"
                                android:textColor="#5C5B5B"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                />

                        </RelativeLayout>


                    </TableRow>

                </TableLayout>


            </LinearLayout>

        </ScrollView>

        <!-- FOOTER -->
        <TableLayout
            android:id="@+id/containerFooter"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:background="#3D0555"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/lblFooter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_light"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:text="@string/main_label_footer"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>